v. 1.1.1 * Add app icons * Bug documentation on double-click on close buttons * Update all packages * Improve build scripts